feat: implement backend for household management
